--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,10 +58,6 @@ h1 {
   color:white !important;
 }
 
-/* .aboutPic {
-  width:23%;
-} */
-
 .myContent {
   background:white;
 }
@@ -107,3 +103,55 @@ h1 {
   resize:none;
 }
 
+.contentImg {
+  border-radius: 15px;
+}
+
+.dropbtn {
+  background-color: #4aaaa5;
+  color: white;
+  padding: 0.5rem;
+  width:100%;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  bottom: 16%;
+  display: block;
+
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100%;
+  padding: 0.2rem;
+  box-shadow: 0px 8px 16px 0px black;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 0;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #4aaaa5;
+}
