--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@ body {
   background-image:url(../images/prism.png)
 }
 
+
+  .container {
+    max-width: 1140px !important;
+}
+
+
 p {
   color:#777777;
   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -61,7 +67,6 @@ h1 {
 
 .myContent {
   background:#ffffff;
-  opacity: 0.75;
 }
 
 .contentHeadText {
@@ -158,3 +163,5 @@ h1 {
 .dropdown:hover .dropbtn {
   background-color: #4aaaa5;
 }
+
+
